fix: get rid of scrollbars in graph + use natural size for svg

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -369,7 +369,8 @@ footer
       color: color-success
 
   svg
-    box-shadow: inset 0 1px #fff;
+    //box-shadow: inset 0 1px #fff;
+    height: 300px
 
   .view-result
     position: relative
@@ -396,7 +397,6 @@ footer
         color: color-link
     .view-result-graph
       background-color: #F8F9FB
-      height: 300px !important
       a.icon-table
         font-size: 24px
         absolute: bottom 57px right horizontal-padding
